# DirectX11-Study

./: CMakeLists.txt  CMakeSettings.json  README.md
framework/include/: framework.h
framework/src/: framework.cpp
res/Day1/: TrianglePixelShader.hlsl  TriangleVertexShader.hlsl
res/Day2/1/: TriangleVertexShader.hlsl
res/Day2/3/: TrianglePixelShader.hlsl  TriangleVertexShader.hlsl
res/Day3/1/: TexturePixelShader.hlsl  TextureVertexShader.hlsl
res/Day3/2/: TexturePixelShader.hlsl
res/Day3/3/: TriangleVertexShader.hlsl
res/Day4/1/: TriangleVertexShader.hlsl
res/Day4/2/: LightingVertexShader.hlsl
res/Day5/1/: PixelShader.hlsl  VertexShader.hlsl
res/Day5/2/: NormalColorPixelShader.hlsl  NormalColorVertexShader.hlsl  TextureVertexShader.hlsl
res/Day6/1/: NormalColorPixelShader.hlsl  NormalColorVertexShader.hlsl  TexturePixelShader.hlsl
res/Day6/2/: DeferredPixelShader.hlsl  DeferredVertexShader.hlsl  DrawDepthBufferPixelShader.hlsl  DrawGBufferPixelShader.hlsl  DrawGBufferVertexShader.hlsl
res/Day6/3/: DeferredLightingPixelShader.hlsl  DeferredLightingVertexShader.hlsl  DeferredPixelShader.hlsl
res/Day7/2/: GaussianBlur.hlsl
res/Day7/Common/: RenderToScreen.hlsl  RenderToTexture.hlsl
res/Day8/2/: RenderSkybox.hlsl
res/Day8/Common/: RenderObject.hlsl
src/: common.manifest
src/Day1/1. Create Device with Legacy/: Main.cpp  README.md
src/Day1/2. Create Device with Brandnew/: Main.cpp  README.md
src/Day1/3. Create Render Target View/: Main.cpp  README.md
src/Day1/4. Rendering Triangle/: Main.cpp  README.md
src/Day2/1. Colored Triangle/: Main.cpp
src/Day2/2. Transform/: Main.cpp
src/Day2/3. Box/: Main.cpp
src/Day2/4. Depth Buffer/: Main.cpp
src/Day3/1. Texturing/: Main.cpp
src/Day3/2. Multi Texturing/: Main.cpp
src/Day3/3. Draw Vertices without Vertex Buffer/: Main.cpp
src/Day4/1. Blending/: Main.cpp
src/Day4/2. Forward Lighting/: Main.cpp
src/Day5/1. Mirror with Stencil/: Main.cpp
src/Day5/2. Render Target/: Main.cpp
src/Day6/1. Multi Render Target/: Main.cpp
src/Day6/2. Multi Render Target 2/: Main.cpp
src/Day6/3. Deferred Lighting/: Main.cpp
src/Day7/1. CPU Texture Blur/: Main.cpp
src/Day7/2. DirectCompute Texture Blur/: Main.cpp
src/Day8/1. Camera/: Main.cpp
src/Day8/2. Skybox/: Main.cpp
src/Day8/3. XInput/: Main.cpp
src/Day9/1. 3D Audio with XAudio2/: Main.cpp
